# CAOS_ProspectMap

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  LICENSES.md  README.md  STRUCTURE.md  VERSION  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data-pipeline/: README.md  requirements-precompute.txt  requirements.txt
data-pipeline/pmlab/: __init__.py  live.py  pipeline.py  pu_conformal.py  real_learned.py  real_usmvt.py  registry.py
data/derived/: case-results.json  geology-ood-real.onnx  geology-ood.onnx  mpm-classifier-real.onnx  mpm-classifier.onnx  mpm-puconformal-real.onnx  pm-learned-real.json  pm-learned.json  pu-conformal.json
data/examples/: cases.csv
deploy/: pages.md
docs/: README.md  architecture.md  cases.md  frameworks.md  guides.md
docs/architecture/: 01_overview.md  02_determinism-and-trace.md  03_the-gate.md  04_live-lane-pyodide.md  04_live-lane.md  05_precompute-pipeline.md  06_model-evaluation.md  07_deploy.md  08_data-contracts.md
docs/cases/: README.md
docs/frameworks/: 01_wofe.md  02_viz.md  03_torch-onnx.md  04_ml-ladder.md  05_pu-learning.md  06_uncertainty-and-conformal.md
docs/guides/: 00_instantiate.md  01_precompute-pipeline.md  02_bring-your-own-data.md  03_gpu-lane.md  04_run-the-api.md  05_architecture-modal.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: CNAME
frontend/src/: App.tsx  main.tsx  (+2 more)
scripts/: precompute.ps1  precompute.sh
tests/: conftest.py  test_contract.py  test_manifest.py  test_pipeline_smoke.py
(+84 files in other folders)
