# ProspectMap, the offline pipeline package `pmlab` (ADR-0057 product-repo archetype).
# The default lane is numpy-only (instantly installable); the heavy learned lane (torch -> ONNX) is pinned in
# data-pipeline/requirements-precompute.txt and documented in docs/frameworks/03_torch-onnx.md.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pmlab"
# PEP 440 form of the display version X.XX.XXX (see CHANGELOG.md + pmlab.__version__).
version = "0.8.0"
description = "ProspectMap, Weights-of-Evidence mineral prospectivity mapping: offline data-pipeline + two data contracts + staged pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Felipe Santibáñez-Leal" }]
dependencies = ["numpy>=1.26"]

[tool.setuptools.packages.find]
where = ["data-pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# single-letter math notation (loop indices, contingency counts) is intentional domain notation, not ambiguous.
ignore = ["E741"]
